# dinopod

./: .gitignore  Cargo.toml  DINOPOD_IMPLEMENTATION_PLAN.md  README.md  deny.toml  skills-lock.json
.github/workflows/: ci.yml  deploy-installer.yml  release.yml
docs/: install-dns.md
docs/plans/: 2026-05-28-001-feat-dinopod-secure-mvp-plan.md  2026-05-28-002-refactor-pr1-review-findings-plan.md  2026-05-28-003-feat-curl-install-script-plan.md  2026-05-28-004-feat-native-dev-node-plan.md  2026-05-28-005-feat-init-config-id-first-cli-plan.md
scripts/: install.sh
src/: app.rs  cli.rs  cmd.rs  compose.rs  config.rs  detect.rs  domain.rs  env.rs  errors.rs  fs.rs  git.rs  init_wizard.rs  lib.rs  lifecycle.rs  lock.rs  main.rs  names.rs  preflight.rs  process.rs  proxy.rs  routes.rs  runtime.rs  state.rs  ui.rs
tests/: architecture.rs  cli.rs  cmd.rs  compose_config.rs  config.rs  detect.rs  e2e.rs  env.rs  git_worktree.rs  init_wizard.rs  names.rs  preflight.rs  proxy_config.rs  runtime.rs  state.rs  ui.rs
tests/fixtures/basic-compose/: compose.yaml
tests/fixtures/infra-compose/: docker-compose.yml
tests/fixtures/next-package/: package.json
tests/install/: install.bats
tests/install/fixtures/: build.sh
tests/install/fixtures/v0.1.0-test/: dinopod-v0.1.0-test-x86_64-unknown-linux-gnu.tar.gz.sha256
tests/install/helpers/: setup.bash
tests/install/mocks/: uname
